--- a/2.html
+++ b/2.html
@@ -3,21 +3,19 @@
 <head>
 <title>2주년</title>
 <meta charset="utf-8">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1><a href="index.html">9.29</a></h1>
+  <div id="grid">
 <ul>
-  <li><a href="1.html">1주년</a></li>
-  <li><a href="2.html">2주년</a></li>
+  <li><a href="1.html" class="saw">1주년</a></li>
+  <li><a href="2.html" class="saw active">2주년</a></li>
   <li><a href="3.html">3주년</a></li>
   <li><a href="4.html">4주년</a></li>
 </ul>
-<ol>
-  <li><a href="1.html">1주년</a></li>
-  <li><a href="2.html">2주년</a></li>
-  <li><a href="3.html">3주년</a></li>
-  <li><a href="4.html">4주년</a></li>
-  </ol>
+
+   <div id="article">
 <h2>2017.9.29</h2>
 김성훈 ＆ 오시연 <strong><u>2</u>주년</strong>
 <br><br>벌써 2주년
@@ -27,6 +25,8 @@
 target="_blank">이니스프리</a>
 <a href="https://www.innisfree.com/kr/ko/Main.do"
 target="_blank" title="이니스프리 제주하우스">이니스프리</a>
+</div>
+</div>
 <img src="coding.jpg" width="100%">
 
 </body>
