--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!doctype html>
 <html>
 <head>
-<title>안녕하세요</title>
-<meta charset="utf-8">
+ <title>안녕하세요</title>
+ <meta charset="utf-8">
+ <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1><a href="index.html">9.29</a></h1>
-<ul>
-  <li><a href="1.html">1주년</a></li>
-  <li><a href="2.html">2주년</a></li>
-  <li><a href="3.html">3주년</a></li>
-  <li><a href="4.html">4주년</a></li>
-</ul>
-<ol>
-  <li><a href="1.html">1주년</a></li>
-  <li><a href="2.html">2주년</a></li>
-  <li><a href="3.html">3주년</a></li>
-  <li><a href="4.html">4주년</a></li>
-  </ol>
+<div id="grid">
+  <ul>
+    <li><a href="1.html" class="saw">1주년</a></li>
+    <li><a href="2.html" class="saw">2주년</a></li>
+    <li><a href="3.html">3주년</a></li>
+    <li><a href="4.html">4주년</a></li>
+  </ul>
+
+  <div id="article">
 <h2>2015.9.29</h2>
 김성훈 ＆ 오시연
 <br><br>만난날
@@ -26,6 +24,8 @@
 target="_blank">이니스프리</a>
 <a href="https://www.innisfree.com/kr/ko/Main.do"
 target="_blank" title="이니스프리 제주하우스">이니스프리</a></p>
+</div>
+</div>
 <img src="coding.jpg" width="100%">
 
 </body>
